--- a/vk-hosting-config.json
+++ b/vk-hosting-config.json
@@ -1,9 +1,8 @@
 {
   "static_path": ".",
-  "app_id": 0,
+  "app_id": 51848151,
   "endpoints": {
     "mobile": "index.html",
-    "mvk": "index.html",
     "web": "index.html"
   }
 }
